--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,8 @@
 .header {
     background-color: #333;
     color: #fff;
-    padding: 20px;
+    padding: 5px;
     text-align: center;
     position: relative;
+    justify-content: center;    
     }
